se termino la mayoria, falta revisar errores y ver que todo este de acuerdo a las consignas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
         "ostream": "cpp",
         "string": "cpp",
         "iostream": "cpp"
+    },
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
     }
 }
